# BMSTU-CG-CP

./: .gitignore  CMakeLists.txt  Makefile  README.md  conversions.h  cp.pro  figure.cpp  figure.h  main.cpp  map_prepare.cpp  map_prepare.h  moc_QSFML.cpp  moc_handler.cpp  moc_main_window.cpp  my_vec3f.cpp  my_vec3f.h  operations.cpp  operations.h  point.cpp  point.h  research.ipynb  textured_triangle.cpp  textured_triangle.h  time.csv  time_parallel.csv  triangle.cpp  triangle.h  ui_main_window.h
inc/: QSFML.h  camera.h  conversions.h  cp_cg_ui.h  figure.h  handler.h  light_bulb.h  main_window.h  main_window.ui  map_prepare.h  my_vec3f.h  operations.h  particles_system.h  qdialogs.h  scene.h  smoke.h  textured_figure.h  textured_triangle.h  triangle.h
prepared_srtm/: .shit.swp  V2_2_160.64_56.06.tif  klyuchevskaya.hdr
report/: 02-intro.aux  02-intro.tex  10-analysis.aux  10-analysis.tex  20-design.aux  20-design.tex  30-impl.aux  30-impl.tex  40-research.aux  40-research.tex  50-conclusion.aux  50-conclusion.tex  51-biblio.aux  51-biblio.tex  60-addition.aux  60-addition.tex  preamble.tex  report.aux  report.blg  report.tex  report.toc
report/assets/img/: .$Naive_stocks.drawio.dtmp  .$add_source.drawio.bkp  .$advect.drawio.bkp  .$advect.drawio.dtmp  .$dens_step.drawio.bkp  .$dens_step.drawio.dtmp  .$diffuse.drawio.bkp  .$gauss-zeidel.drawio.bkp  .$gauss-zeidel.drawio.dtmp  .$project.drawio.bkp  .$project.drawio.dtmp  .$uml.drawio.bkp  .$velocity_step.drawio.bkp  .$velocity_step.drawio.dtmp  .$z-буфер.drawio.bkp  .$z-буфер.drawio.dtmp  Naive_stocks.drawio  add_source.drawio  advect.drawio  dens_step.drawio  diffuse.drawio  gauss-zeidel.drawio  project.drawio  uml.drawio  velocity_step.drawio  z-буфер.drawio
src/: QSFML.cpp  camera.cpp  conversions.cpp  figure.cpp  handler.cpp  light_bulb.cpp  main.cpp  main_window.cpp  map_prepare.cpp  my_vec3f.cpp  operations.cpp  particles_system.cpp  scene.cpp  smoke.cpp  textured_figure.cpp  textured_triangle.cpp  triangle.cpp
unprepared_srtm/: srtm_68_01.hdr  srtm_68_01.tfw  srtm_69_01.hdr  srtm_69_01.tfw  srtm_69_02.hdr  srtm_69_02.tfw
